--- a/aula2/portfolio/aula - 1 html/style/curriculo.css
+++ b/aula2/portfolio/aula - 1 html/style/curriculo.css
@@ -7,7 +7,7 @@
     
     body {
     height: 200vh;
-    background-color: rgb(96, 167, 149);
+    background-color: rgb(167, 152, 114);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -58,7 +58,10 @@
            height: auto;
            order: 2;
         }
-    
+     
+        .apresentacao-conteudo-texto {
+            font-size: 22px;
+        }
     
     .apresentacao-conteudo-titulo {
             font-size: 50px;
@@ -69,7 +72,7 @@
     
     
     .apresentacao-conteudo-paragrafo {
-            font-size: 50px;
+            font-size: 70px;
             font-family: 'Montserrat', sans-serif;
             text-align: justify; 
           
@@ -103,9 +106,12 @@
         font-size: 18px;
         font-weight: 400;
         padding: 20px;   
+
     }
+
+
     .rodape a:hover {
-        color: #07ff98;
+        color: #ff078f;
         
     }
     
